# finlab

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
finlab/: __init__.py  cli.py
finlab/ashare/: __init__.py  chief.py  data.py  screener.py  tracker.py
finlab/core/: __init__.py  _time.py  config.py  jin10.py  models.py  scoring.py  sources.py  vocabulary.py
finlab/macro/: __init__.py  director.py  fetchers.py  report.py  scoring.py
finlab/news/: __init__.py  analysis.py  brief.py  fetchers.py
finlab/report/: __init__.py  fetchers.py  generator.py  sections.py
finlab/trade/: __init__.py  executor.py
tests/: test_cli.py  test_core.py  test_report.py  test_scoring.py
